// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Policy Sets Form Field renders error 1`] = `
<div>
  <div
    class="bp3-form-group bp3-intent-danger formGroup"
  >
    <label
      class="bp3-label"
    >
      common.policiesSets.policyset
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addModifyButton Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.policiesSets.addOrModifyPolicySet
        </span>
      </button>
      <div
        class="bp3-form-helper-text"
      >
        <div
          class="FormError--errorDiv"
          data-name="dummy"
        >
          <span
            class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
            data-icon="circle-cross"
          >
            <svg
              height="12"
              viewBox="0 0 13 13"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="FormError--error"
          >
            Failed to validate
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Policy Sets Form Field snapshot test and open close modal 1`] = `
<div>
  <div
    class="bp3-form-group formGroup"
  >
    <label
      class="bp3-label"
    >
      common.policiesSets.policyset
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addModifyButton Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.policiesSets.addOrModifyPolicySet
        </span>
      </button>
    </div>
  </div>
</div>
`;
